--- a/index.html
+++ b/index.html
@@ -4,12 +4,37 @@
 		<title>
 			Velocity
 		</title>
+		<style>
+			* {font-family: sans-serif;}
+			body {background-color: #505050; color: white;}
+			a {text-decoration: none; color: white; background-color: dodgerblue; padding: 3px; font-size: 48px;}
+		</style>
 	</head>
-	<body style="background-color: #505050; margin: 0;">
-		<canvas id="viewport">
-			Browser not supported
-		</canvas>
-		<script src="https://library.alticator.com/alticator-canvas-engine.js"></script>
-		<script src="app.js"></script>
+	<body>
+		<h1>
+			Alticator Velocity
+		</h1>
+		<a href="game.html">
+			Start Game
+		</a>
+		<h2>
+			Powered by Alticator Canvas Engine
+		</h2>
+		<h2>
+			Help
+		</h2>
+		<h5>
+			Use arrow keys to control:
+		</h5>
+		<p>
+			Accelerate: Up Arrow <br>
+			Steer: Left and Right Arrow
+		</p>
+		<h5>
+			Game Goal
+		</h5>
+		<p>
+			Drive the track without touching any of the red obstacles. If you touch a blue cube, your car will go faster. You can see the distance left on the tool bar on the top of the screen.
+		</p>
 	</body>
 </html>
